<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:animateLayoutChanges="true"
    tools:context=".ui.login.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorWhite"
        android:elevation="0dp" tools:targetApi="21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_sign_up"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/sign_up_toolbar"
        android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingMax"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_sign_up"
            style="@style/TextTitleTheme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingMedium"
            style="@style/TextDescriptionTheme"
            android:text="@string/welcome_message_sign_up_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingMax"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/assist_highlight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/TextNormalTheme"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMax"
            android:hint="@string/prompt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/TextNormalTheme"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMax"
            android:hint="@string/prompt_national_ID"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/TextNormalTheme"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMax"
            android:hint="@string/prompt_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/TextNormalTheme"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginMax"
            app:passwordToggleEnabled="true"
            android:hint="@string/prompt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/TextNormalTheme"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sign_up_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingMax"
                android:text="@string/action_sign_up"
                android:layout_marginTop="@dimen/marginMax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/paddingMax"
                android:gravity="center"
                style="@style/TextDescriptionTheme"
                android:text="By signing up you agree to Destiny Connections Media Terms and Conditions"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>