<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:elevation="0dp" tools:targetApi="21"
        android:layout_height="?actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_sign_in"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_toolbar"
        android:layout_above="@id/sign_up_button"
        android:background="@color/colorWhite"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingMax"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_sign_in"
            android:gravity="center"
            style="@style/TextTitleTheme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingMedium"
            style="@style/TextDescriptionTheme"
            android:text="@string/welcome_message_sign_in_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingMax"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/sign_in_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextNormalTheme"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginMedium"
    app:passwordToggleEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionDone"
        style="@style/TextNormalTheme"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

</com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@color/colorWhite"
        android:padding="@dimen/paddingMedium"
        style="@style/TextControlActiveTheme"
        android:layout_marginTop="@dimen/marginMedium"
        android:text="Forgot password?"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingMax"
        android:text="@string/action_sign_in"
        android:layout_marginTop="@dimen/marginMax" />


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
    </LinearLayout>

    </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/toolbar_elevation" tools:targetApi="21"
            android:textAllCaps="false"
            android:background="@color/colorWhite"
            android:padding="@dimen/paddingMax"
            android:layout_alignParentBottom="true"
            android:text="No account? Create one"/>

</RelativeLayout>